@startuml
skinparam classAttributeIconSize 0
hide circle
title SummaryCommand Class Diagram

' =====================
' Classes
' =====================

interface "<<interface>>\nCommand" as Command {
    + exec(args : String) : void
}

class SummaryCommand {
    - {static} LOGGER : Logger
    + SummaryCommand(pets : PetList)
    + exec(args : String) : void
}

class PetList {
    + stream() : Stream<Pet>
}

class Pet {
    - name : String
    - treatments : ArrayList<Treatment>
    + getName() : String
    + getTreatments() : ArrayList<Treatment>
}

class Treatment {
    - type : String
    - date : LocalDate
    - note : String
    - isCompleted : boolean
    + getType() : String
    + getDate() : LocalDate
    + isCompleted() : boolean
    + toString() : String
}

class DateUtils {
    + {static} parseDateRange(args : String) : Map<String, LocalDate>
    + {static} isDateValid(fromDate : LocalDate, toDate : LocalDate, syntax: String) : boolean
}

class Ui {
    + printHeader(header : String) : void
    + printList(list : ArrayList<T>) : void
}

' =====================
' Relationships
' =====================

SummaryCommand .|> Command
SummaryCommand --> PetList
SummaryCommand ..> Ui
SummaryCommand --> DateUtils
PetList "1" *-- "*" Pet : contains >
Pet "1" *-- "*" Treatment : has >
@enduml